# vscpl1drv-can232

./: .gitignore  .gitignore-cmake  .gitmodules  CMAKE_BUILD.md  CMAKE_CONVERSION.md  CMAKE_MACOS.md  CMAKE_WINDOWS.md  CMakeLists.txt  CMakePresets.json  CONVERSION_SUMMARY.md  LICENSE  MIGRATION_GUIDE.md  Makefile  Makefile.in  QUICK_START.md  README.md  WINDOWS_CMAKE_SUMMARY.md  WINDOWS_QUICKSTART.md  build_debian_package.sh  clean_for_dist  config.h  config.status  configure  configure.ac  setup.bat  setup.sh
.github/workflows/: cmake-ci.yml
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
common/: can232obj.h  com.h  com_macos.cpp  com_macos.h  com_win32.cpp  com_win32.h
debian_orig/: README.Debian  README.source  changelog  control  copyright  install  links  manpages  rules  shlibs
debug/linux/: vscpd.xml
linux/: CMakeLists.txt  Makefile  Makefile.in  can232obj.cpp  can232obj.h  canal_macro.h  test.cpp  version.h.in  vscpl1drv-can232.cpp  vscpl1drv-can232.h  vscpl1drv-can232.so.1.1.0  vscpl1drv-can4vscp.so.1.1.0
linux/nbproject/: configurations.xml  project.xml
linux/nbproject/private/: Default.properties  configurations.xml
mac/: CMakeLists.txt
man/: make_man_pages  vscpl1drv-can232.1  vscpl1drv-can232.1.md
win32/: CMakeLists.txt  vscpl1drv-can232.nsi
